--- a/BookListRazor/BookListRazor/Pages/BookList/Edit.cshtml
+++ b/BookListRazor/BookListRazor/Pages/BookList/Edit.cshtml
@@ -1,19 +1,21 @@
 ﻿@page
-@model BookListRazor.Pages.BookList.CreateModel
+@model BookListRazor.Pages.BookList.EditModel
 
 <br />
-<h2 class="text-info">Create New Book</h2> <br />
+<h2 class="text-info">Edid Book</h2>
+<br />
 
 
 <div class="border container" style="padding: 30px;">
     <form method="post">
+        <input type="hidden" asp-for="Book.Id">
         <div class="text-danger" asp-validation-summary="ModelOnly"></div>
         <div class="form-group row">
             <div class="col-3">
                 <label asp-for="Book.Name"></label>
             </div>
             <div class="col-6">
-                <input asp-for="Book.Name" class="form-control"/>
+                <input asp-for="Book.Name" class="form-control" />
             </div>
             <span asp-validation-for="Book.Name" class="text-danger"></span>
         </div>
@@ -22,7 +24,7 @@
                 <label asp-for="Book.Author"></label>
             </div>
             <div class="col-6">
-                <input asp-for="Book.Author" class="form-control"/>
+                <input asp-for="Book.Author" class="form-control" />
             </div>
             <span asp-validation-for="Book.Author" class="text-danger"></span>
         </div>
@@ -31,13 +33,13 @@
                 <label asp-for="Book.ISBN"></label>
             </div>
             <div class="col-6">
-                <input asp-for="Book.ISBN" class="form-control"/>
+                <input asp-for="Book.ISBN" class="form-control" />
             </div>
             <span asp-validation-for="Book.ISBN" class="text-danger"></span>
         </div>
         <div class="form-check-group row">
             <div class="col-3 offset-4">
-                <input type="submit" value="Create" class="btn btn-primary form-control" />
+                <input type="submit" value="Edit" class="btn btn-primary form-control" />
             </div>
             <div class="col-3">
                 <a asp-page="Index" class="btn btn-success form-control">Back to List</a>
@@ -46,6 +48,6 @@
     </form>
 </div>
 
-@section Scripts{ 
-    <partial name="_ValidationScriptsPartial"/>
+@section Scripts{
+    <partial name="_ValidationScriptsPartial" />
 }
