--- a/BookListRazor/BookListRazor/Pages/BookList/Index.cshtml
+++ b/BookListRazor/BookListRazor/Pages/BookList/Index.cshtml
@@ -8,7 +8,7 @@
         <h2 class="text-info">Book List</h2>
     </div>
     <div class="col-3">
-        <a asp-page="Create" class="btn btn-info form-control text-white">Create New Book</a>
+        <a asp-page="Upsert" class="btn btn-info form-control text-white">Create New Book</a>
     </div>
 
     <div class="col-12 border p-3 mt-3">
@@ -33,21 +33,21 @@
                     </tr>
                     @foreach (var item in Model.Books)
                     {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(m => item.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(m => item.Author)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(m => item.ISBN)
-                    </td>
-                    <td>
-                        <button asp-page-handler="Delete" asp-route-id="@item.Id" OnClick="return confirm('Are you sure to delete ?')" class="btn btn-danger btn-sm">Delete</button>
-                        <a asp-page="Edit" asp-route-id="@item.Id" class="btn btn-success btn-sm text-white">Edit</a>
-                    </td>
-                </tr>
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(m => item.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(m => item.Author)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(m => item.ISBN)
+                            </td>
+                            <td>
+                                <button asp-page-handler="Delete" asp-route-id="@item.Id" OnClick="return confirm('Are you sure to delete ?')" class="btn btn-danger btn-sm">Delete</button>
+                                <a asp-page="Upsert" asp-route-id="@item.Id" class="btn btn-success btn-sm text-white">Edit</a>
+                            </td>
+                        </tr>
                     }
                 </table>
             }
@@ -57,4 +57,26 @@
             }
         </form>
     </div>
+
+    <div class="col-12" style="text-align:center">
+        <br />
+        <span class="h3 text-info">OR</span>
+        <br />
+    </div>
+    <div class="col-12 border p-3">
+        <table id="DT_load" class="table table-striped table-bordered" style="width:100%">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Author</th>
+                    <th>ISBN</th>
+                    <th></th>
+                </tr>
+            </thead>
+        </table>
+    </div>
 </div>
+
+@section Scripts{
+    <script src="~/js/bookList.js"></script>
+}
