--- a/BookListRazor/BookListRazor/Pages/BookList/Upsert.cshtml
+++ b/BookListRazor/BookListRazor/Pages/BookList/Upsert.cshtml
@@ -1,14 +1,18 @@
 ﻿@page
-@model BookListRazor.Pages.BookList.EditModel
+@model BookListRazor.Pages.BookList.UpsertModel
+
 
 <br />
-<h2 class="text-info">Edit Book</h2>
+<h2 class="text-info">@(Model.Book.Id == 0 ? "Create": "Edit")  Book</h2>
 <br />
 
 
 <div class="border container" style="padding: 30px;">
     <form method="post">
-        <input type="hidden" asp-for="Book.Id">
+        @if (Model.Book.Id != 0) 
+        { 
+            <input type="hidden" asp-for="Book.Id">
+        }
         <div class="text-danger" asp-validation-summary="ModelOnly"></div>
         <div class="form-group row">
             <div class="col-3">
@@ -39,7 +43,7 @@
         </div>
         <div class="form-check-group row">
             <div class="col-3 offset-4">
-                <input type="submit" value="Edit" class="btn btn-primary form-control" />
+                <button type="submit" class="btn btn-primary form-control" >@(Model.Book.Id == 0 ? "Create" : "Update")</button>
             </div>
             <div class="col-3">
                 <a asp-page="Index" class="btn btn-success form-control">Back to List</a>
